# inip

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  build.ini  build.py
.github/workflows/: release-build.yaml  sync-branch.yaml
cmake/: aarch64-linux-toolchain.cmake  arm-linux-gnueabihf-toolchain.cmake  i686-linux-gnu-toolchain.cmake  i686-mingw-toolchain.cmake  riscv64-linux-gnu-toolchain.cmake  x86_64-linux-toolchain.cmake  x86_64-mingw-toolchain.cmake
doc/: build.md  import_ex.md
doc/zh/: Build.md  BuildTool.md  Usage.md
include/inip/: Exception.hpp  IniMgr.hpp  Node.hpp  Section.hpp  Tools.hpp  Types.hpp  ini.hpp  inip.hpp
src/config/: CMakeLists.txt  config.h.in  version.h.in
src/demo/: Batch.cpp  Batch.hpp  CMakeLists.txt  Command.cpp  Command.hpp  Configure.hpp  Inip.cpp  InipCore.cpp  InipCore.hpp  Main.cpp  Shell.cpp  Shell.hpp
src/test/: CMakeLists.txt  test_ini.cpp  test_ini.hpp  test_inimgr.cpp  test_inimgr.hpp  test_node.cpp  test_section.cpp  test_tools.cpp  test_types.cpp
